--- a/style.css
+++ b/style.css
@@ -13,3 +13,8 @@ h1 {
     border: 3px solid yellow;
     padding: 10px;  
 }
+
+#theNickestNames { 
+    margin-left: 15%; 
+    padding: 10px; 
+}
