--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 #The_Good_Grass {
     background-image: url(/Users/jeffjamestrella/Desktop/jeffTryingToPractice/images/bradley-brister-WdsLOJ5BViU-unsplash.jpg);
-    height: 100%;
-    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
     
 }
 
