--- a/style.css
+++ b/style.css
@@ -14,7 +14,18 @@ h1 {
     padding: 10px;  
 }
 
+h2 {
+    color: yellow;
+}
+
 #theNickestNames { 
     margin-left: 15%; 
     padding: 10px; 
+    color: white; 
+}
+
+#OrgansTori {
+    float: right;
+    margin-right: 15%; 
+    color: white;
 }
