--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ h1 {
     text-align: center;
     margin: auto;
     width: 50%; 
-    border: 3px solid yellow;
-    padding: 10px;  
+    border: 5px solid yellow;
+    padding: 15px;  
+    background-color: lightblue; 
 }
 
 h2 {
@@ -27,6 +28,20 @@ h2 {
 
 #OrgansTori {
     text-align: right;
+    margin-right: 15%;
+    padding : 10px;
+    color: white;
+}
+
+#AwwCmonAsians {
+    text-align: left;
+    margin-left: 15%;
+    padding : 10px;
+    color: white;
+}
+
+#Feerends {
+    text-align: center;
     margin-right: 15%;
     padding : 10px;
     color: white;
